src/main/java/com/example/appjambackend/global/error/ErrorResponse.java
package com.example.appjambackend.global.error;public class ErrorResponse {
}
